# my-genai

./: .pre-commit-config.yaml  Dockerfile  Dockerfile_mcp  LICENSE  README.md  chainlit_frontend.py  docker-compose.yml  main.py  pyproject.toml
.github/: copilot-instructions.md  pull_request_template.md
.github/workflows/: ci_pipeline.yml  unit_tests.yml
chainlit_pages/: base.py
conf/: config.yaml
html/: index.html
mcp_server/: server.py
routers/: agents_router.py  chainlit_router.py
src/agents_library/: __init__.py  base.py  initiator.py  memory.py  response_types.py
src/agents_library/agents/first_agent/: agent_config.yaml  initial_action_prompts.md  replacement_method.py  system_prompt.md
src/agents_library/agents/search_engine/: agent_config.yaml  system_prompt.md
src/api_client/: chat_client.py  langchain_adapter.py
src/config/: settings.py
src/mcp_client/: client.py  langgraph_tools.py
tests/test_src/agent_library/: test_base.py  test_initiator.py
