[tool.pytest.ini_options]
addopts = """
    -s -p no:warnings
    --ignore docs
    --cov src
    --cov-report xml
    --cov-report html
"""
log_cli = 1
log_cli_level = "INFO"
log_cli_format = "[pytest][%(asctime)s][%(levelname)s][%(module)s][%(funcName)s] %(message)s"
log_cli_date_format = "%Y-%m-%d %H:%M:%S"
log_level = "INFO"
testpaths = ["tests"]

[tool.coverage.run]
branch = true
source = [
    "src"
]

[tool.coverage.report]
exclude_lines = [
    "if self.debug:",
    "pragma: no cover",
    "raise NotImplementedError",
    "if __name__ == .__main__.:"
]
ignore_errors = true
omit = [
    "tests/*",
    "setup.py",
]

[tool.ruff]
line-length = 88
indent-width = 4

target-version = "py313"

[tool.ruff.lint]
select = ["E4", "E7", "E9", "F", "D2", "D3", "D4", "I", "N", "UP", "RUF"]

# Allow fix for all enabled rules (when `--fix`) is provided.
fixable = ["ALL"]

# Allow unused variables when underscore-prefixed.
dummy-variable-rgx = "^(_+|(_+[a-zA-Z0-9_]*[a-zA-Z0-9]+?))$"

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"

[tool.mypy]
warn_unused_ignores = true
cache_fine_grained = true
explicit_package_bases = true
strict = true

[tool.poetry]
name = "my-genai"
version = "0.1.0"
description = ""
authors = ["Reza <srh.umir@gmail.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
ipython = "^8.23.0"
requests = "^2.31.0"
pymupdf = "^1.26.0"
jupyter = "^1.1.1"
tabulate = "^0.9.0"
chainlit = "^2.9.5"
pydantic = "^2.12.3"
litellm = "^1.81.0"

[tool.poetry.group.mcp_server.dependencies]
python = "^3.12"
ipython = "^8.23.0"
jupyter = "^1.1.1"
aiofiles = "^24.1.0"
databricks-sqlalchemy = "^2.0.7"
fastmcp = "^2.12.4"
pandas = "^2.2.3"
pydantic = "^2.12.3"
pyodbc = "^5.2.0"
requests = "^2.31.0"
sqlalchemy = "^2.0.41"
tabulate = "^0.9.0"

[tool.poetry.group.dev.dependencies]
mypy = "^1.9.0"
pre-commit = "^3.7.0"
python-dotenv = "^1.0.1"
pytest = "^8.0.0"
pytest-cov = "^4.0.0"
ruff = "^0.3.7"
types-requests = "^2.31.0.20240406"
databricks-sdk = "^0.32.0"
sphinx = "8.0.2"
sphinx-rtd-theme = "^3.0.2"
myst-parser = "^4.0.1"
sphinx-multiversion = "^0.2.4"
pandas-stubs = "^2.3.0.250703"
pymupdf-stubs = "^1.26.1.post1"
pytest-asyncio = "^1.1.0"
types-aiofiles = "^25.1.0.20251011"
freezegun = "^1.5.5"
types-python-dateutil = "^2.9.0.20251115"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
